--- a/.gitignore
+++ b/.gitignore
@@ -298,3 +298,4 @@ mysql/cad_registry-v2.mwb.bak
 /test/2026_v2/hmdb.csv
 /test/2026_v2/exports/hmdb.csv
 /tools/runtimes
+/scripts/localdb/ec_numbers.fasta
