--- a/.gitignore
+++ b/.gitignore
@@ -299,3 +299,4 @@ mysql/cad_registry-v2.mwb.bak
 /test/2026_v2/exports/hmdb.csv
 /tools/runtimes
 /scripts/localdb/ec_numbers.fasta
+/scripts/localdb/subcellular.fasta
