--- a/src/registry_exports/registry_exports.vbproj
+++ b/src/registry_exports/registry_exports.vbproj
@@ -55,6 +55,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\GCModeller\src\GCModeller\core\Bio.Assembly\biocore-netcore5.vbproj" />
+    <ProjectReference Include="..\..\..\GCModeller\src\GCModeller\engine\Model\Model.Core.NET5.vbproj" />
     <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\src\Core.vbproj" />
     <ProjectReference Include="..\..\..\graphQL\src\mysqli\LibMySQL\LibMySQL.vbproj" />
     <ProjectReference Include="..\..\..\mzkit\src\metadb\Massbank\massbank.NET5.vbproj" />
