--- a/src/fixTool/fixTool.vbproj
+++ b/src/fixTool/fixTool.vbproj
@@ -34,9 +34,8 @@
     <ProjectReference Include="..\..\..\GCModeller\src\GCModeller\data\RegulonDatabase\RegulonDatabase.NET5.vbproj" />
     <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\src\Core.vbproj" />
     <ProjectReference Include="..\..\..\graphQL\src\mysqli\LibMySQL\LibMySQL.vbproj" />
-    <ProjectReference Include="..\biocad_storage\biocad_storage.vbproj" />
+    <ProjectReference Include="..\registry_data\registry_data.vbproj" />
   </ItemGroup>
 
-  <Import Project="..\..\..\BlueprintCAD\src\CADRegistry\WebJSON\WebJSON.projitems" Label="Shared" />
 
 </Project>
