--- a/src/registry_exports/registry_exports.vbproj
+++ b/src/registry_exports/registry_exports.vbproj
@@ -59,6 +59,7 @@
     <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\src\Core.vbproj" />
     <ProjectReference Include="..\..\..\graphQL\src\mysqli\LibMySQL\LibMySQL.vbproj" />
     <ProjectReference Include="..\..\..\mzkit\src\metadb\Massbank\massbank.NET5.vbproj" />
+    <ProjectReference Include="..\..\..\mzkit\src\metadb\XrefEngine\XrefEngine.NET5.vbproj" />
     <ProjectReference Include="..\registry_data\registry_data.vbproj" />
   </ItemGroup>
 
